Switch Vehicles API endpoint for Assignmnet flow

--- a/angular/projects/app/src/app/assignments/select-assignment.component.html
+++ b/angular/projects/app/src/app/assignments/select-assignment.component.html
@@ -8,7 +8,7 @@
 <div class="portrait-container">
   <h4 i18n>Please select your unit:</h4>
   <fieldset [disabled]="isLoading">
-    <shared-list class="row" type="demographics.vehicles">
+    <shared-list class="row" type="vehicles">
       <ng-template let-record="record">
         <div class="col-3 mb-3">
           <shared-checkbox
