Setting up Export interface

--- a/angular/projects/app/src/app/incidents/reports/report.component.html
+++ b/angular/projects/app/src/app/incidents/reports/report.component.html
@@ -1,5 +1,6 @@
 <shared-command-header>
   <a class="command-header__plain" (click)="onDone()">Done</a>
+  <a class="command-header__plain" (click)="onExport()">Export</a>
 </shared-command-header>
 <main>
   <form *ngIf="report" class="report">
